<resources>
    <string name="app_name">Pizza Parlor</string>
    <string name="t1">Deluxe Pizza</string>
    <string name="t2">Hawaiian Pizza</string>
    <string name="t3">Pepperoni Pizza</string>
    <string name="t4">Current Order</string>
    <string name="t5">Store Orders</string>
    <string name="p1">Customer Number</string>
    <string name="pType">Pizza Type</string>
    <string name="si">Size</string>
    <string name="top">Toppings</string>
    <string name="top1">Pepperoni</string>
    <string name="top2">Ham</string>
    <string name="top3">Pineapple</string>
    <string name="top4">Olives</string>
    <string name="top5">Chicken</string>
    <string name="top6">Mushroom</string>
    <string name="top7">Onion</string>
    <string name="pr">Price</string>
    <string name="add">Add To Order</string>
    <string name="piz">Pizza Order</string>
    <string name="rem">Remove Pizza</string>
    <string name="sub">Subtotal</string>
    <string name="tax">Sales Tax</string>
    <string name="tot">Order Total</string>
    <string name="pla">Place Order</string>
    <string name="stor">Store Order</string>
    <string name="ca">Cancel Order</string>
    <string name="e1">Invalid Phone Number</string>
    <string name="potitle">Order Your Pizza</string>

    <string-array name="Size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
</resources>