<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stor"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="16dp" />

    <Spinner
        android:id="@+id/phoneNumbers"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="73dp" />

    <ListView
        android:id="@+id/sOrderListView"
        android:layout_width="409dp"
        android:layout_height="329dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="98dp" />

    <EditText
        android:id="@+id/orderTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/tot"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="438dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ca"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="530dp" />
</androidx.constraintlayout.widget.ConstraintLayout>